[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.14",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
    "asyncio>=3.4.3",
    "streamlit>=1.41.1",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "numpy>=2.2.0",
    "ratelimit>=2.2.1",
    "google>=3.0.0",
    "google-genai>=0.3.0",
    "frontend>=0.0.3",
    "pymupdf>=1.25.1",
]
